Se agregan comentario al index.html y main.js.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </nav>
     </div>
-    <!-- Modal -->
+    <!-- Modal para agregar temas-->
     <div id="verModal" class="modal">
       <div class="modal-content">
         <div class="row">
